crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__application_with_record.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "Code:\n\nf { x = 1 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 12,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var {
                kind: LowVar,
                name: "f",
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Record(
                    [
                        FieldAssign {
                            field: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 5,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 6,
                                    },
                                },
                                value: "x",
                            },
                            value: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 10,
                                    },
                                },
                                value: Int(
                                    1,
                                ),
                            },
                        },
                    ],
                ),
            },
        ],
    },
}
