crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__async_block_nested.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: "async { async { 42 } }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 23,
        },
    },
    value: Async(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 23,
                },
            },
            value: Block {
                stmts: [],
                tail: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 21,
                            },
                        },
                        value: Async(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 15,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 21,
                                    },
                                },
                                value: Block {
                                    stmts: [],
                                    tail: Some(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 17,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 19,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 42.0,
                                                    text: "42",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                ),
            },
        },
    ),
}
