crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__async_block_requires_braces.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: async 42
---
Block(
    Open(
        1,
        7,
    ),
    1,
    7,
)
