crates/alder-parse/src/expression/snapshots/alder_parse__expression__tests__async_lambda_prefix_is_not_an_expression.snap
---
source: crates/alder-parse/src/expression/mod.rs
description: async x -> x
---
Block(
    Open(
        1,
        7,
    ),
    1,
    7,
)
